Fixes to Website and Grid
I made a mistake in the actual website and it wasn't aligned right, but then I found the problem with the help of Jacob.

--- a/pc_grids.css
+++ b/pc_grids.css
@@ -5,13 +5,16 @@
    Tutorial Case
    
    Style Sheet for Grids used in the Pandaisia Chocolates website
-   Author: 
-   Date:   
+   Author: Anthony S.A Gradillas
+   Date: 10.12.18
    
    Filename: pc_grids.css
 
 */
 
+/* div {
+    outline: 1px solid red;
+} */
 
 /* Grid Rows Styles */
 div.row {
@@ -54,3 +57,10 @@ div.col-3-4 {
 }
 
 /* Grid Outline Styles */
+
+/* Practice */
+section {
+    display: grid;
+    grid-template-rows: 100px auto 100px;
+    grid-template-columns: 25% 50% 25%;
+}
