--- a/pc_reset.css
+++ b/pc_reset.css
@@ -69,7 +69,7 @@ ul {
 }
 
 nav ul {
-    list-style: none;
+    list-style-type: none;
     list-style-image: none;
 }
 
